Prevent word wrapping on pre messages

--- a/cmd/leaps/www-cm/css/style.css
+++ b/cmd/leaps/www-cm/css/style.css
@@ -291,6 +291,7 @@ header > .buttons-container, header > .icon-container {
 #message-list pre {
 	margin: 0;
 	font-size: 1.2em;
+	white-space: pre-wrap;
 }
 
 #message-list > div {
